<resources>
    <string name="app_name">DataVault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dashboard">Dashboard</string>
    <string name="field_test">Field Test</string>
    <string name="donor_kit_history">Donor Kit History</string>
    <string name="task">Task</string>
    <string name="task_sum">Task Name</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="field_test_updated_successfully"><font fgcolor='#666666'>Field Test Updated</font>\n<font fgcolor='#196ea7'>Successfully</font></string>
    <string name="sync_updated_successfully"><font fgcolor='#666666'>Synchronization Completed</font>\n<font fgcolor='#196ea7'>Successfully</font></string>
    <string name="network_connection">No Internet connection found. Check your\nconnection or try again.</string>
    <string name="dialog_task">Lorem Ipsum has been the industry\'s standard dummy text ever since
    the 1500s, when an unknown printer took a galley of type and scrambled
    it to make a type specimen book. It has survived not only five centuries,
    but also the leap into electronic typesetting, remaining essentially
    unchanged.</string>
    <string name="validation">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="mobile_validation">0123456789</string>
    <string name="pass_validation">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@#^_-$.</string>
    <string name="ssn_validation">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM-</string>
    <string name="empty_username">Please enter username.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="donor_identification">Donor Identification</string>
    <string name="kit_id">Kit ID</string>
    <string name="kit_id_sum">Kit Id</string>
    <string name="kit_result">Kit Result</string>
    <string name="donor_identification_val">The supervisor or enforcement \n officer will update the donor \n details in the form</string>
    <string name="kit_id_val">The supervisor or enforcement \n officer will scan the QR code to \n fetch the kit ID</string>
    <string name="kit_result_val">The supervisor or enforcement \n officer will update the test result \n kit image and submit.</string>
    <string name="temp_name">Johnie Cornwall</string>
    <string name="temp_address">Seattle, USA</string>
    <string name="temp_case_id">Case Id</string>
    <string name="temp_status">Status</string>
    <string name="temp_sync">Sync</string>
    <string name="temp_not_sync">Not Sync</string>
    <string name="temp_get_start">Get Start</string>
    <string name="temp_deleted">Deleted</string>
    <string name="temp_complete">Completed</string>
    <string name="temp_donor">donor</string>
    <string name="temp_dashboard">Dashboard</string>
    <string name="temp_donor_count">Donor Count</string>
    <string name="temp_25">25</string>
    <string name="temp_kit_count">Kit Count</string>
    <string name="temp_12">12</string>
    <string name="temp_pending_test_for_sync">Pending Test for Sync</string>
    <string name="temp_10">10</string>
    <string name="temp_today_task">Task Count</string>
    <string name="temp_08">08</string>
    <string name="temp_start_test">Start Test</string>
    <string name="temp_task_name">Task Name</string>
    <string name="temp_capture_donor_info">Capture \n Donor Info</string>
    <string name="temp_capture_kit_info">Capture Kit \n Info</string>
    <string name="temp_capture_test_result">Capture Test \n Result</string>
    <string name="tmp_name">Name</string>
    <string name="tmp_dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="tmp_next">Next</string>
    <string name="tmp_donor_image">Donor Image\u0020\u0020\u0020\u0020\u0020</string>
    <string name="tmp_id_image">Reference \u0020\u0020\u0020\u0020\u0020</string>
    <string name="tmp_donor_image_sum">Donor Images</string>
    <string name="tmp_address">Address</string>
    <string name="tmp_id_ref">Id Number</string>
    <string name="tmp_tampering_ref">TL Reference</string>
    <string name="tmp_mobile_number">Mobile Number</string>
    <string name="tmp_ssn">SSN</string>
    <string name="tmp_email">Email</string>
    <string name="tmp_female">Female</string>
    <string name="tmp_male">Male</string>
    <string name="tmp_positive">Positive</string>
    <string name="tmp_negative">Negative</string>
    <string name="tmp_passed">Passed</string>
    <string name="tmp_failed">Failed</string>
    <string name="tmp_kit_scan">Kit Scan</string>
    <string name="tmp_kit_image">Kit Image\u0020\u0020\u0020\u0020\u0020</string>
    <string name="tmp_kit_image_sum">Kit images</string>
    <string name="tmp_test_kit">Test Result Image\u0020\u0020\u0020\u0020\u0020</string>
    <string name="tmp_test_kit_sum">Field Test Result images</string>
    <string name="tmp_submit">Submit</string>
    <string name="tmp_result">Result</string>
    <string name="tmp_result_sum">Field Test Result</string>
    <string name="tmp_result_tit">Result Information</string>
    <string name="tmp_skip">Skip</string>
    <string name="tmp_done">Done</string>
    <string name="email">Email</string>
    <string name="email_val">Johniecornwall@gmail.com</string>
    <string name="tmp_number">91 – 9876543210</string>
    <string name="address">Address</string>
    <string name="addr_val">KK Nagar, Chennai - 600078</string>
    <string name="synchronization">Synchronization</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="login">Login</string>
    <string name="tmp_100">100%</string>
    <string name="tmp_sync">Synchronization 19 / 26</string>
    <string name="new_record">New record(s) are in sync/ adding to the server</string>
    <string name="whoops">Whoops!</string>
    <string name="schedule_date">Scheduled Date</string>
    <string name="task_name">Task Name</string>
    <string name="donor_name">Donor Name</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>
    <string name="comments">Comments</string>
    <string name="comments_sum">Field Test Comments</string>
    <string name="digital_insurance_claim">Digital Insurance Claim</string>
    <string name="task_description">Task Description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_task">Select Task</string>
    <string name="select_area">Select Area</string>
    <string name="select_id_type">Select Id Type</string>
    <string name="tampering_type">Tampering</string>
    <string name="adulterant_result">Adulterant</string>
    <string name="select_kit">Select Kit</string>
    <string name="logo">logo</string>
    <string name="general">Select task / General</string>
    <string name="general_">General</string>
    <string name="data_update">Data update</string>
    <string name="last_sync">Last Sync - August 12,2018 | 07:40 pm</string>
    <string name="tmp_cancel">Cancel</string>
    <string name="tmp_edit">Edit</string>
    <string name="positive">positive</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="valid_donor_name">Please enter donor name.</string>
    <string name="valid_donor_dob">Please select donor date of birth.</string>
    <string name="valid_donor_email">Please enter donor email.</string>
    <string name="valid_donor_email_format">Please enter valid email.</string>
    <string name="valid_donor_mobile">Please enter donor mobile number.</string>
    <string name="valid_donor_max_mobile">Max limit should be 14.</string>
    <string name="valid_donor_ssn">SSN should be 5–20 length, only alphanumeric and - allowed</string>
    <string name="valid_donor_min_mobile">Min limit should be 5.</string>
    <string name="valid_donor_address">Please enter donor address.</string>
    <string name="valid_donor_min_address">Please enter minimum 20 characters.</string>
    <string name="valid_donor_max_address">Please enter maximum 100 characters.</string>
    <string name="valid_donor_image">Please capture donor image.</string>
    <string name="valid_officer_comments">Please enter comments.</string>
    <string name="donor_image_list_empty">Please capture donor image</string>
    <string name="donor_id_empty">Please capture donor id image</string>
    <string name="kit_image_list_empty">Please capture kit image</string>
    <string name="result_image_list_empty">Please capture result image</string>
    <string name="kit_id_alert">Please select kit ID</string>
    <string name="custom_error_password_not_equal">New &amp; Confirm password doesn\'t match</string>
    <string name="old_password_error">Please enter old password</string>
    <string name="password_error">Please enter New Password</string>
    <string name="admin">Admin</string>
    <string name="supervisor">Supervisor</string>
    <string name="Okay">Ok</string>
    <string name="incomplete">Incomplete, Try again</string>
    <string name="user_name">Please enter username</string>
    <string name="user_password">Please enter password</string>
    <string name="no_record">No record(s) found.</string>
    <string name="no_donor">No donor(s) found.</string>
    <string name="no_task_found">No new task created</string>
    <string name="no_result_validation">Please select test result</string>
    <string name="no_adult_result_validation">Please select adulterant test result</string>
    <string name="no_gender_validation">Please select donor gender</string>
    <string name="confirm_password_error">Please enter confirm password</string>
    <string name="min_password_limit">Please enter minimum 6 characters and password
        should not be same as username.</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="area_sum">Area Name</string>
    <string name="no_area">No Area Found</string>
    <string name="no_task">No Task Found</string>
    <string name="submit_note">Kindly review and confirm the information. Once submitted you can\'t edit/modify the field test values</string>
    <string name="all_donors">All Donors</string>
</resources>
