<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/settings"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_field_test"
            android:icon="@drawable/settings"
            android:title="@string/field_test" />
        <item
            android:id="@+id/nav_donor_history"
            android:icon="@drawable/history"
            android:title="@string/donor_kit_history" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/profile"
            android:title="@string/sync" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/pass"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/pass"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>
