<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height56"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/data_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/incomplete"
        android:textColor="?android:textColorTertiary"
        android:textSize="@dimen/font14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <TextView
        android:id="@+id/dialog_ok"
        android:layout_width="@dimen/layout_height160"
        android:layout_height="@dimen/layout_height48"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rect_blue"
        android:gravity="center"
        android:text="@string/Okay"
        android:textColor="?android:textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>