<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragments.main.DonorKitHistoryFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorPrimary"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/default_8"
                android:paddingTop="@dimen/default_8">

                <TextView
                    android:layout_width="@dimen/layout_width0"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight4"
                    android:gravity="center"
                    android:text="@string/temp_case_id"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font16" />

                <TextView
                    android:layout_width="@dimen/layout_width0"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight4"
                    android:gravity="center"
                    android:text="@string/temp_status"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font16" />

                <TextView
                    android:layout_width="@dimen/layout_width0"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight4"
                    android:gravity="center"
                    android:text="@string/temp_sync"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font16" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_14" />

        </LinearLayout>

        <include
            android:id="@+id/no_record"
            layout="@layout/no_record"
            android:visibility="gone" />
    </FrameLayout>

</layout>