<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.neopharma.datavault.model.user.UserData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="?colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/nav_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/nav" />

        <LinearLayout
            android:id="@+id/profile_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_10">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="@dimen/layout_width72"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nav_header_desc"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="@dimen/default_2"
                    app:customUrl="@{data.getAvatar}"
                    app:placeholder="@{@drawable/user}" />

                <ImageView
                    android:id="@+id/network_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/online" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_20"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    style="@style/TextViewInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:singleLine="true"
                    android:text="@{data.getFullName}"
                    android:textSize="@dimen/font14"
                    tools:text="@string/temp_name" />

                <TextView
                    android:id="@+id/user_address"
                    style="@style/TextViewInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingTop="@dimen/default_4"
                    android:singleLine="true"
                    android:text="@{data.address}"
                    android:textSize="@dimen/font10"
                    tools:text="@string/temp_address" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>